--- a/dos33.html
+++ b/dos33.html
@@ -2951,18 +2951,18 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     094 ;                                                           
                     095 ; OPTAB - OPTIONAL PARMS SYNTAX TABLES                      
                     096 ;                                                           
-                    097 OPTAB1      EQU *                                           ; It would be better to <i>interleave</i> OPTAB1 and OPTAB2 to prevent synchronization mistakes:
+                    097 <a class='d' name='OPTAB1'   >OPTAB1      </a>EQU *                                           ; It would be better to <i>interleave</i> OPTAB1 and OPTAB2 to prevent synchronization mistakes:
 2941:D6 C4 D3 CC    098             DFB 'V'+$80,'D'+$80,'S'+$80,'L'+$80'            ;    DFB 'V'+$80, V
 2945:D2 C2 C1 C3    099             DFB 'R'+$80,'B'+$80,'A'+$80,'C'+$80'            ;    DFB 'D'+$80, D         ; /sarcasm Apparently <span class='code'>MSB ON</span> was broken
 2949:C9 CF          100             DFB 'I'+$80,'O'+$80'                            ;    DFB 'S'+$80, S         ; What's the point of compacting the lines?
-                    101 OPT1L       EQU *-OPTAB1                                    ;    DFB 'L'+$80, L
-                    102 MI          EQU $20                                         ;    DFB 'R'+$80, R         ; <span class='todo'>TODO</span> does MI alias FN1?
-                    103 MO          EQU $10                                         ;    DFB 'B'+$80, B         ; <span class='todo'>TODO</span> does MO alias FN2?
-                    104 OPTAB2      EQU *                                           ;    DFB 'A'+$80, ADR
+                    101 <a class='d' name='OPT1L'    >OPT1L       </a>EQU *-OPTAB1                                    ;    DFB 'L'+$80, L
+                    102 <a class='e' name='MI'       >MI          </a>EQU $<span class='n'>20</span>                                         ;    DFB 'R'+$80, R         ; <span class='todo'>TODO</span> does MI alias FN1? See <a class='x' href='#DRTNI'>DRTNI</a>
+                    103 <a class='e' name='MO'       >MO          </a>EQU $<span class='n'>10</span>                                         ;    DFB 'B'+$80, B         ; <span class='todo'>TODO</span> does MO alias FN2? See <a class='x' href='#DRTNO'>DRTNO</a>
+                    104 <a class='d' name='OPTAB2'   >OPTAB2      </a>EQU *                                           ;    DFB 'A'+$80, ADR
 294B:40 20 10 08    105             DFB V,D,S,L                                     ;    DFB 'C'+$80, CIO+MC    ; <span class='todo'>TODO</span> Where is MC defined?
 294F:04 02 01 C0    106             DFB R,B,ADR,CIO+MC                              ;    DFB 'I'+$80, CIO+MI
 2953:A0 90          107             DFB CIO+MI,CIO+MO                               ;    DFB 'O'+$80, CIO+MO
-                    108 OPTAB3 EQU *                                                ; *sigh* Yay for more crappy table formatting
+                    108 <a class='d' name='OPTAB3'   >OPTAB3 </a>EQU *                                                ; *sigh* Yay for more crappy table formatting
                                                                                     ;     [Min, Max]
                                                                                     ;     DW 0, 254    ; Volume
                                                                                     ;     DW 1, 2      ; Drive
@@ -2971,26 +2971,26 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                                                                                     ;     DW 0, 32767  ; Record Number
                                                                                     ;     DW 0, 32767  ; Record byte number
                                                                                     ;     DW 0, $FFFF  ; Address
-2955:00 00          109             DW 0                                            ; [0]
-2957:FE 00          110             DW 254          ; VOL RANGE
-2959:01 00          111             DW 1                                            ; [1]
-295B:02 00          112             DW 2            ; DRIVE RANGE
-295D:01 00          113             DW 1                                            ; [2]
-295F:07 01          114             DW 7            ; SLOT RANGE
-2961:01 00          115             DW 1                                            ; [3]             <span class='code'>BSAVE FOO,A$0,L$C000</span> won't work without patching DOS
-<hr>2963:FF 7F          116             DW 32767        ; LENGTH RANGE                  ; === Page <a class='page' name='page23'>23</a> === A963:FF BF to save &gt; 32KB (48KB)
-2965:00 00          117             DW 0                                            ; [4]
-2967:FF 7F          118             DW 32767        ; REC NO RANGE
-2969:00 00          119             DW 0                                            ; [5]
-296B:FF 7F          120             DW 32767        ; REC BYTE NO RANGE
-296D:00 00          121             DW 0                                            ; [6]
-296F:FF FF          122             DW $FFFF        ; ADDRESS RANGE
+2955:00 00          109             DW <span class='n'>0</span>                                            ; [0]
+2957:FE 00          110             DW <span class='n'>254</span>          ; VOL RANGE
+2959:01 00          111             DW <span class='n'>1</span>                                            ; [1]
+295B:02 00          112             DW <span class='n'>2</span>            ; DRIVE RANGE
+295D:01 00          113             DW <span class='n'>1</span>                                            ; [2]
+295F:07 01          114             DW <span class='n'>7</span>            ; SLOT RANGE
+2961:01 00          115             DW <span class='n'>1</span>                                            ; [3]             <span class='code'>BSAVE FOO,A$0,L$C000</span> won't work without patching DOS
+<hr>2963:FF 7F          116             DW <span class='n'>32767</span>        ; LENGTH RANGE                  ; === Page <a class='page' name='page23'>23</a> === A963:FF BF to save &gt; 32KB (48KB)
+2965:00 00          117             DW <span class='n'>0</span>                                            ; [4]
+2967:FF 7F          118             DW <span class='n'>32767</span>        ; REC NO RANGE
+2969:00 00          119             DW <span class='n'>0</span>                                            ; [5]
+296B:FF 7F          120             DW <span class='n'>32767</span>        ; REC BYTE NO RANGE
+296D:00 00          121             DW <span class='n'>0</span>                                            ; [6]
+296F:FF FF          122             DW $<span class='n'>FFFF</span>        ; ADDRESS RANGE
                     123 ;
                     124 ; ERROR MESSAGE TABLES
                     125 ;
-                    126 EMSG        EQU *
-2971:0D 07 8D       127             DFB $0D, $07, $8D                               ; <a class='magic' name='_'>magic number</a> CR, BELL, CR + #$80
-                    128 EM1         EQU *-EMSG
+                    126 <a class='d' name='EMSG'     >EMSG        </a>EQU *
+2971:0D 07 8D       127             DFB $<span class='n'>0D</span>, $<span class='n'>07</span>, $<span class='n'>8D</span>                               ; <a class='magic' name='_'>magic number</a> CR, BELL, CR + #$80
+                    128 <a class='d' name='EM1'      >EM1         </a>EQU *-<a class='v' name='EMSG'>EMSG</a>
 2974:4C 41 4E 47    129             DCI "LANGUAGE NOT AVAILABLE"
 2978:55 41 47 45
 297C:20 4E 4F 54
@@ -3089,7 +3089,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 2A6E:00 00          032 <a class="d" name="CR"    >CR          </a>DW 0            ; RECORD NUMBER
 2A70:00 00          033 <a class="d" name="CB"    >CB          </a>DW 0            ; RECORD BYTE
 2A72:00 00          034 <a class="d" name="CA"    >CA          </a>DW 0            ; ADDRESS                       ; $AA72:Address of last BLOAD
-2A74:00             035 <a class="d" name="IMBITS">IMBITS      </a>DFB 0                                           ; ???
+2A74:00             035 <a class="d" name="IMBITS">IMBITS      </a>DFB 0                                           ; <span class='todo'>TODO</span>: Input Monitor Bits??? Used in <a class='x' href='#EMON'>EMON</a>
                     036             MSB ON                                          ; We can't <span class="macro">DS 30-5,$A0</span> ???
 2A75:C8 C5 CC CC    037 <a class="d" name="FNAME1">FNAME1      </a>ASC "HELLO                         " ; FILENAME 1"
 2A79:CF A0 A0 A0
