Annotate inconsistent command EXEC

--- a/dos33.html
+++ b/dos33.html
@@ -2817,7 +2817,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 28A6:43 CB
 28A8:43 4C 4F 53 C5 015             DCI "CLOSE"$
 28AD:52 45 41 C4    016             DCI "READ"
-28B1:45 58 45 C3    017             DCI "EXEC"                                      ; inconsistent abbreviation
+28B1:45 58 45 C3    017             DCI "EXEC"                                      ; inconsistent abbreviation: EXECUTE
 28B5:57 52 49 54 C5 018             DCI "WRITE"$
 28BA:50 4F 53 49    019             DCI "POSITION"$
 2854:54 49 4F CE
