--- a/dos33.html
+++ b/dos33.html
@@ -2876,12 +2876,11 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     056 <a class='e' name='B'      >B           </a>EQU $<span class='n'>02</span>         ; BYTE NUMBER ALLOWED
                     057 <a class='e' name='ADR'    >ADR         </a>EQU $<span class='n'>01</span>         ; ADDRESS                       ; Can't use A due to crappy tools: assembler reserves <span class='code'>A</span> for implicit 6502 Accumulator such as <span class='code'>LSR A</span>
                     058 <a class='e' name='CIO'    >CIO         </a>EQU $<span class='n'>80</span>         ; C,I, OR O ALLOWED
-                    059 
-                    060 ;
-                    061 ; COMMAND SYNTAX TABLE
-                    062 ; EACH COMMAND HAS TWO BYTE ENTRY 
-                    063 ;
-                    064 <a class='d' name='CMDSTB' >CMDSTB      </a>EQU *                                           ; This is another complete clusterfrak of bad formatting
+                    059 ;
+                    060 ; COMMAND SYNTAX TABLE
+                    061 ; EACH COMMAND HAS TWO BYTE ENTRY 
+                    062 ;
+                    063 <a class='d' name='CMDSTB' >CMDSTB      </a>EQU *                                           ; This is another complete clusterfrak of bad formatting
                                                                                     ;
                                                                                     ; The <a class='dumb' name='amateur2'>second sign</a> of an amateur programmer:
                                                                                     ;     <b>One who doesn't understand the importance of whitespace.</b> (Horizontal and Vertical)
@@ -2919,50 +2918,50 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                                                                                     ; FN1                      , V+D+S      +ADR  ; BLOAD
                                                                                     ; FN1                      , V+D+S      +ADR  ; BRUN
                                                                                     ; FN1                      , V+D+S            ; VERIFY
-2909:21 70          065             DFB FN1+CREFLG,V+D+S          ; INIT
-290B:A0 70          066             DFB NPB+FN1,V+D+S             ; LOAD
-290D:A1 70          067             DFB NPB+FN1+CREFLG,V+D+S      ; SAVE
-290E:A0 70          068             DFB NPB+FN1,V+D+S             ; RUN
-2911:20 70          069             DFB FN1,V+D+S                 ; CHAIN
-2913:20 70          070             DFB FN1,V+D+S                 ; DELETE
-2915:20 70          071             DFB FN1,V+D+S                 ; LOCK
-2917:20 70          072             DFB FN1,V+D+S                 ; UNLOCK
-2919:60 00          073             DFB NPE+FN1,0                 ; CLOSE
-291B:22 06          074             DFB FN1+RNONLY,B+R            ; READ
-291D:20 74          075             DFB FN1,R+V+D+S               ; EXEC
-291F:22 06          076             DFB FN1+RNONLY,B+R            ; WRITE
-2921:22 04          077             DFB FN1+RNONLY,R              ; POSITION
-2923:23 78          078             DFB FN1+RNONLY+CREFLG,L+V+D+S ; OPEN
-2925:22 70          079             DFB FN1+RNONLY,V+D+S          ; APPEND
-2927:30 70          080             DFB FN1+FN2,V+D+S             ; RENAME
-2929:40 70          081             DFB NPE,V+D+S                 ; CATALOG
-292B:40 80          082             DFB NPE,CIO                   ; MONITOR
-292D:40 80          083             DFB NPE,CIO                   ; NO MONITOR
-292F:08 00          084             DFB NUM1,0                    ; PR#
-2931:08 00          085             DFB NUM1,0                    ; IN#
-2933:04 00          086             DFB NUM2,0                    ; MAXFILES
-2935:40 70          087             DFB NPE,V+D+S                 ; APPLESOFT
-2937:40 00          088             DFB NPE,0                     ; INT
-2939:21 79          089             DFB FN1+CREFLG,V+D+S+ADR+L    ; BSAVE
-293B:20 71          090             DFB FN1,V+D+S+ADR             ; BLOAD
-293D:20 71          091             DFB FN1,V+D+S+ADR             ; BRUN
-293F:20 70          092             DFB FN1,V+D+S                 ; VERIFY
-                    093             PAGE
-                    094 ;                                                           
-                    095 ; OPTAB - OPTIONAL PARMS SYNTAX TABLES                      
-                    096 ;                                                           
-                    097 <a class='d' name='OPTAB1'   >OPTAB1      </a>EQU *                                           ; It would be better to <i>interleave</i> OPTAB1 and OPTAB2 to prevent synchronization mistakes:
-2941:D6 C4 D3 CC    098             DFB 'V'+$80,'D'+$80,'S'+$80,'L'+$80'            ;    DFB 'V'+$80, V
-2945:D2 C2 C1 C3    099             DFB 'R'+$80,'B'+$80,'A'+$80,'C'+$80'            ;    DFB 'D'+$80, D         ; /sarcasm Apparently <span class='code'>MSB ON</span> was broken
-2949:C9 CF          100             DFB 'I'+$80,'O'+$80'                            ;    DFB 'S'+$80, S         ; What's the point of compacting the lines?
-                    101 <a class='d' name='OPT1L'    >OPT1L       </a>EQU *-OPTAB1                                    ;    DFB 'L'+$80, L
-                    102 <a class='e' name='MI'       >MI          </a>EQU $<span class='n'>20</span>                                         ;    DFB 'R'+$80, R         ; <span class='todo'>TODO</span> does MI alias FN1? See <a class='x' href='#DRTNI'>DRTNI</a>
-                    103 <a class='e' name='MO'       >MO          </a>EQU $<span class='n'>10</span>                                         ;    DFB 'B'+$80, B         ; <span class='todo'>TODO</span> does MO alias FN2? See <a class='x' href='#DRTNO'>DRTNO</a>
-                    104 <a class='d' name='OPTAB2'   >OPTAB2      </a>EQU *                                           ;    DFB 'A'+$80, ADR
-294B:40 20 10 08    105             DFB V,D,S,L                                     ;    DFB 'C'+$80, CIO+MC    ; <span class='todo'>TODO</span> Where is MC defined?
-294F:04 02 01 C0    106             DFB R,B,ADR,CIO+MC                              ;    DFB 'I'+$80, CIO+MI
-2953:A0 90          107             DFB CIO+MI,CIO+MO                               ;    DFB 'O'+$80, CIO+MO
-                    108 <a class='d' name='OPTAB3'   >OPTAB3 </a>EQU *                                                ; *sigh* Yay for more crappy table formatting
+2909:21 70          064             DFB FN1+CREFLG,V+D+S          ; INIT
+290B:A0 70          065             DFB NPB+FN1,V+D+S             ; LOAD
+290D:A1 70          066             DFB NPB+FN1+CREFLG,V+D+S      ; SAVE
+290E:A0 70          067             DFB NPB+FN1,V+D+S             ; RUN
+2911:20 70          068             DFB FN1,V+D+S                 ; CHAIN
+2913:20 70          069             DFB FN1,V+D+S                 ; DELETE
+2915:20 70          070             DFB FN1,V+D+S                 ; LOCK
+2917:20 70          071             DFB FN1,V+D+S                 ; UNLOCK
+2919:60 00          072             DFB NPE+FN1,0                 ; CLOSE
+291B:22 06          073             DFB FN1+RNONLY,B+R            ; READ
+291D:20 74          074             DFB FN1,R+V+D+S               ; EXEC
+291F:22 06          075             DFB FN1+RNONLY,B+R            ; WRITE
+2921:22 04          076             DFB FN1+RNONLY,R              ; POSITION
+2923:23 78          077             DFB FN1+RNONLY+CREFLG,L+V+D+S ; OPEN
+2925:22 70          078             DFB FN1+RNONLY,V+D+S          ; APPEND
+2927:30 70          079             DFB FN1+FN2,V+D+S             ; RENAME
+2929:40 70          080             DFB NPE,V+D+S                 ; CATALOG
+292B:40 80          081             DFB NPE,CIO                   ; MONITOR
+292D:40 80          082             DFB NPE,CIO                   ; NO MONITOR
+292F:08 00          083             DFB NUM1,0                    ; PR#
+2931:08 00          084             DFB NUM1,0                    ; IN#
+2933:04 00          085             DFB NUM2,0                    ; MAXFILES
+2935:40 70          086             DFB NPE,V+D+S                 ; APPLESOFT
+2937:40 00          087             DFB NPE,0                     ; INT
+2939:21 79          088             DFB FN1+CREFLG,V+D+S+ADR+L    ; BSAVE
+293B:20 71          089             DFB FN1,V+D+S+ADR             ; BLOAD
+293D:20 71          090             DFB FN1,V+D+S+ADR             ; BRUN
+293F:20 70          091             DFB FN1,V+D+S                 ; VERIFY
+                    092             PAGE
+                    093 ;                                                           
+                    094 ; OPTAB - OPTIONAL PARMS SYNTAX TABLES                      
+                    095 ;                                                           
+                    096 <a class='d' name='OPTAB1'   >OPTAB1      </a>EQU *                                           ; It would be better to <i>interleave</i> OPTAB1 and OPTAB2 to prevent synchronization mistakes:
+2941:D6 C4 D3 CC    097             DFB 'V'+$80,'D'+$80,'S'+$80,'L'+$80'            ;    DFB 'V'+$80, V
+2945:D2 C2 C1 C3    098             DFB 'R'+$80,'B'+$80,'A'+$80,'C'+$80'            ;    DFB 'D'+$80, D         ; /sarcasm Apparently <span class='code'>MSB ON</span> was broken
+2949:C9 CF          099             DFB 'I'+$80,'O'+$80'                            ;    DFB 'S'+$80, S         ; What's the point of compacting the lines?
+                    100 <a class='d' name='OPT1L'    >OPT1L       </a>EQU *-OPTAB1                                    ;    DFB 'L'+$80, L
+                    101 <a class='e' name='MI'       >MI          </a>EQU $<span class='n'>20</span>                                         ;    DFB 'R'+$80, R         ; <span class='todo'>TODO</span> does MI alias FN1? See <a class='x' href='#DRTNI'>DRTNI</a>
+                    102 <a class='e' name='MO'       >MO          </a>EQU $<span class='n'>10</span>                                         ;    DFB 'B'+$80, B         ; <span class='todo'>TODO</span> does MO alias FN2? See <a class='x' href='#DRTNO'>DRTNO</a>
+                    103 <a class='d' name='OPTAB2'   >OPTAB2      </a>EQU *                                           ;    DFB 'A'+$80, ADR
+294B:40 20 10 08                    104             DFB V,D,S,L                                     ;    DFB 'C'+$80, CIO+MC    ; <span class='todo'>TODO</span> Where is MC defined?
+294F:04 02 01 C0    105             DFB R,B,ADR,CIO+MC                              ;    DFB 'I'+$80, CIO+MI
+2953:A0 90          106             DFB CIO+MI,CIO+MO                               ;    DFB 'O'+$80, CIO+MO
+                    107 <a class='d' name='OPTAB3'   >OPTAB3 </a>EQU *                                                ; /sarcasm Yay for more crappy table formatting
                                                                                     ;     [Min, Max]
                                                                                     ;     DW 0, 254    ; Volume
                                                                                     ;     DW 1, 2      ; Drive
@@ -2971,20 +2970,21 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                                                                                     ;     DW 0, 32767  ; Record Number
                                                                                     ;     DW 0, 32767  ; Record byte number
                                                                                     ;     DW 0, $FFFF  ; Address
-2955:00 00          109             DW <span class='n'>0</span>                                            ; [0]
-2957:FE 00          110             DW <span class='n'>254</span>          ; VOL RANGE
-2959:01 00          111             DW <span class='n'>1</span>                                            ; [1]
-295B:02 00          112             DW <span class='n'>2</span>            ; DRIVE RANGE
-295D:01 00          113             DW <span class='n'>1</span>                                            ; [2]
-295F:07 01          114             DW <span class='n'>7</span>            ; SLOT RANGE
-2961:01 00          115             DW <span class='n'>1</span>                                            ; [3]             <span class='code'>BSAVE FOO,A$0,L$C000</span> won't work without patching DOS
-<hr>2963:FF 7F          116             DW <span class='n'>32767</span>        ; LENGTH RANGE                  ; === Page <a class='page' name='page23'>23</a> === A963:FF BF to save &gt; 32KB (48KB)
-2965:00 00          117             DW <span class='n'>0</span>                                            ; [4]
-2967:FF 7F          118             DW <span class='n'>32767</span>        ; REC NO RANGE
-2969:00 00          119             DW <span class='n'>0</span>                                            ; [5]
-296B:FF 7F          120             DW <span class='n'>32767</span>        ; REC BYTE NO RANGE
-296D:00 00          121             DW <span class='n'>0</span>                                            ; [6]
-296F:FF FF          122             DW $<span class='n'>FFFF</span>        ; ADDRESS RANGE
+2955:00 00          108             DW <span class='n'>0</span>                                            ; [0]
+2957:FE 00          109             DW <span class='n'>254</span>          ; VOL RANGE
+2959:01 00          110             DW <span class='n'>1</span>                                            ; [1]
+295B:02 00          111             DW <span class='n'>2</span>            ; DRIVE RANGE
+295D:01 00          112             DW <span class='n'>1</span>                                            ; [2]
+295F:07 01          113             DW <span class='n'>7</span>            ; SLOT RANGE
+2961:01 00          114             DW <span class='n'>1</span>                                            ; [3]             <span class='code'>BSAVE FOO,A$0,L$C000</span> won't work without patching DOS
+<hr>2963:FF 7F          115             DW <span class='n'>32767</span>        ; LENGTH RANGE                  ; === Page <a class='page' name='page23'>23</a> === A963:FF BF to save &gt; 32KB (48KB)
+2965:00 00          116             DW <span class='n'>0</span>                                            ; [4]
+2967:FF 7F          117             DW <span class='n'>32767</span>        ; REC NO RANGE
+2969:00 00          118             DW <span class='n'>0</span>                                            ; [5]
+296B:FF 7F          119             DW <span class='n'>32767</span>        ; REC BYTE NO RANGE
+296D:00 00          120             DW <span class='n'>0</span>                                            ; [6]
+296F:FF FF          121             DW $<span class='n'>FFFF</span>        ; ADDRESS RANGE
+                    122             PAGE
                     123 ;
                     124 ; ERROR MESSAGE TABLES
                     125 ;
